--- a/src/components/DownloadButton.astro
+++ b/src/components/DownloadButton.astro
@@ -36,4 +36,10 @@ const { link, title, ariaLabel, icon, linkText } = Astro.props;
         color: var(--secondary-color);
         border: 1px inset var(--secondary-color);
     }
+    /* @media */
+    @media (min-width: 600px) {
+        .download-button {
+            margin: 0 0 16px 0;
+        }
+    }
 </style>
