--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -98,4 +98,12 @@ const navItems: Nav[] = [
             top: 0;
         }
     }
+    /* @media */
+    @media (min-width: 600px) {
+        .list-item {
+            .list-item__link {
+                font-size: 1.4rem;
+            }
+        }
+    }
 </style>
