--- a/src/islands/project-video/project-video.css
+++ b/src/islands/project-video/project-video.css
@@ -1,12 +1,12 @@
 .card-video {
     width: 100%;
-    height: 180px;
+    height: 160px;
 
     .video {
         width: 100%;
         height: 100%;
         display: block;
-        max-height: 180px;
+        max-height: 160px;
         object-position: top;
         object-fit: cover;
         cursor: pointer;
@@ -16,7 +16,7 @@
 
     .image {
         width: 100%;
-        height: 180px;
+        height: 160px;
         position: absolute;
         top: 0;
         left: 0;
@@ -26,17 +26,18 @@
 
     .card-video__button {
         width: 100%;
-        height: 180px;
+        height: 160px;
         position: absolute;
         top: 0;
         left: 0;
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
-        background-image: url('/src/assets/play-button.webp');
-        background-color: var(--tertiary-color);
+        background-image: url('/src/icons/play-button.svg');
+        background-color: var(--gray-color);
         opacity: 0.5;
         cursor: pointer;
         z-index: 100;
+        border: none;
     }
 }
