--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
     --secondary-color: #FFFFFF;
     --tertiary-color: #ABB2BF;
     --backgroud-color: #282C33;
+    --gray-color: #dcdcdc;
     color-scheme: dark;
 }
 :root[data-theme="light"] {
@@ -11,6 +12,7 @@
     --secondary-color: #4A4E56;
     --tertiary-color: #282C33;
     --backgroud-color: #FFFFFF;
+    --gray-color: #dcdcdc;
     color-scheme: light;
 }
 *, *:before, *:after {
@@ -18,6 +20,8 @@
 }
 html,
 body {
+    max-width: 1200px;
+    margin: 0 auto;
     font-family: 'Fira Code Variable', monospace;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -34,11 +38,13 @@ nav {
     font-size: 1.6rem;
 }
 header {
+    max-width: 1200px;
     width: 100%;
     height: auto;
     position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
     bottom: 0;
-    left: 0;
     z-index: 500;
 }
 main {
@@ -49,6 +55,7 @@ main {
     margin-top: 32px;
 }
 footer {
+    max-width: 1200px;
     width: 100%;
     height: auto;
     display: flex;
@@ -56,8 +63,9 @@ footer {
     align-items: center;
     padding: 16px;
     position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     top: 0;
-    left: 0;
     z-index: 50;
 }
 ul {
@@ -72,6 +80,7 @@ a {
     touch-action: manipulation;
     outline: none;
     cursor: pointer;
+    color: unset;
 }
 select {
     appearance: none;
