--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,13 +5,19 @@ import { ViewTransitions } from 'astro:transitions';
 import Navbar from '@components/Navbar.astro';
 import ConfigurationPicker from '@components/ConfigurationPicker.astro';
 import Social from '@components/Social.astro';
+import GoogleTagManager from '@components/GoogleTagManager.astro';
+import Theme from '@components/Theme.astro';
+import Favicon from '@components/Favicon.astro';
+import Metadata from '@components/Metadata.astro';
 import { getLangFromUrl } from '@i18n/utils';
 
 interface Props {
 	title: string;
+	description: string;
+	keywords: string;
 }
 
-const { title } = Astro.props;
+const { title, description, keywords } = Astro.props;
 
 const lang = getLangFromUrl(Astro.url);
 
@@ -21,29 +27,27 @@ Astro.response.headers.set('CDN-Cache-Control', 'public, max-age=45, must-revali
 <!doctype html>
 <html lang={lang}>
 	<head>
-		<meta charset="UTF-8"/>
-		<meta name="description" content="Astro description"/>
-		<meta name="viewport" content="width=device-width"/>
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
-		<meta name="generator" content={Astro.generator}/>
+		<!-- Metadata start -->
+		<Metadata description={description} keywords={keywords}/>
+		<!-- Metadata end -->
+
+		<!-- Favicon start -->
+		<Favicon/>
+		<!-- Favicon end -->
 
 		<!-- Sitemap start -->
 		<link rel="sitemap" href="/sitemap-index.xml"/>
+		<link rel="alternate" hreflang="es" href="https://agustincammarota.com/es/">
 		<!-- Sitemap end -->
 
 		<!-- Google tag start -->
-		<script is:inline type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-0CE2K20GS5"></script>
-		<script is:inline>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-
-			gtag('config', 'G-0CE2K20GS5');
-		</script>
+		<GoogleTagManager/>
 		<!-- Google tag end -->
 
-		<title>{title}</title>
+		<!-- ViewTransitions start -->
 		<ViewTransitions/>
+		<!-- ViewTransitions end -->
+		<title>{title}</title>
 	</head>
 	<body>
 		<header>
@@ -60,10 +64,5 @@ Astro.response.headers.set('CDN-Cache-Control', 'public, max-age=45, must-revali
 		</footer>
 	</body>
 </html>
-<script is:inline>
-	const storedTheme = localStorage.getItem('theme');
-	const defaultTheme = storedTheme || 'dark';
-	document.documentElement.setAttribute('data-theme', defaultTheme);
-	document.documentElement.style.colorScheme = defaultTheme;
-</script>
+<Theme/>
 
