--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,35 +1,60 @@
 ---
 import '@fontsource-variable/fira-code';
+import '../styles/global.css';
+import { ViewTransitions } from 'astro:transitions';
+import GoogleTagManager from '@components/GoogleTagManager.astro';
+import Metadata from '@components/Metadata.astro';
+import Theme from '@components/Theme.astro';
+import Favicon from '@components/Favicon.astro';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
 import { PATHS } from '@i18n/ui';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 const title = t('not.found.title');
+const description = t('not.found.description');
+const keywords = t('not.found.keywords');
+
+Astro.response.headers.set('CDN-Cache-Control', 'public, max-age=45, must-revalidate');
 ---
 
 <!doctype html>
 <html lang={lang}>
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="description" content="Astro description"/>
-    <meta name="viewport" content="width=device-width"/>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
+    <!-- Metadata start -->
+    <Metadata description={description} keywords={keywords}/>
+    <!-- Metadata end -->
+
+    <!-- Favicon start -->
+    <Favicon/>
+    <!-- Favicon end -->
+
+    <!-- Sitemap start -->
+    <link rel="sitemap" href="/sitemap-index.xml"/>
+    <link rel="alternate" hreflang="es" href="https://agustincammarota.com/es/">
+    <!-- Sitemap end -->
+
+    <!-- Google tag start -->
+    <GoogleTagManager/>
+    <!-- Google tag end -->
+
+    <!-- ViewTransitions start -->
+    <ViewTransitions/>
+    <!-- ViewTransitions end -->
     <title>{title}</title>
 </head>
 <body>
 <main>
-   <section class="not-found-section">
-       <h1 class="not-found-status">4&#9785;4</h1>
-       <h2 class="not-found-title">{t('not.found.header')}</h2>
-       <a class="not-found-link" href={PATHS[lang]} title={t('not.found.link')}>{t('not.found.link')}</a>
-   </section>
+    <section class="not-found-section">
+        <h1 class="not-found-status">4&#9785;4</h1>
+        <h2 class="not-found-title">{t('not.found.header')}</h2>
+        <a class="not-found-link" href={PATHS[lang]} title={t('not.found.link')}>{t('not.found.link')}</a>
+    </section>
 </main>
-
 </body>
 </html>
+<Theme/>
 <style>
-    @import '../styles/global.css';
     main {
         width: 100%;
         height: 100vh;
@@ -37,11 +62,13 @@ const title = t('not.found.title');
         padding: 0;
         overflow: hidden;
     }
+
     @supports (height: 100dvh) {
         main {
             height: 100dvh;
         }
     }
+
     .not-found-section {
         width: 100%;
         height: 100%;
@@ -51,12 +78,14 @@ const title = t('not.found.title');
         flex-direction: column;
         padding: 16px;
     }
+
     .not-found-status {
         margin: 0;
         font-size: 64px;
         letter-spacing: 12px;
         color: var(--primary-color);
     }
+
     .not-found-title {
         margin-top: 0;
         text-align: center;
@@ -64,6 +93,7 @@ const title = t('not.found.title');
         line-height: 54px;
         color: var(--primary-color);
     }
+
     .not-found-title::after {
         content: '|';
         opacity: 1;
@@ -75,6 +105,7 @@ const title = t('not.found.title');
         animation-duration: .7s;
         animation-timing-function: ease-in-out;
     }
+
     .not-found-link {
         width: 200px;
         height: 50px;
@@ -87,10 +118,12 @@ const title = t('not.found.title');
         color: var(--primary-color);
         cursor: pointer;
     }
+
     .not-found-link:hover {
         border: 2px var(--secondary-color) outset;
         color: var(--secondary-color);
     }
+
     @keyframes machine {
         0% {
             opacity: 0;
@@ -99,6 +132,7 @@ const title = t('not.found.title');
             opacity: 1;
         }
     }
+
     @media (prefers-reduced-motion: reduce) {
         .about-title::after {
             animation: none;
