--- a/src/pages/es/contact.astro
+++ b/src/pages/es/contact.astro
@@ -7,6 +7,8 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<Layout title={t('title.contact')}>
+<Layout title={t('title.contact')}
+        description={t('description.contact')}
+        keywords={t('keywords.contact')}>
     <ContactSection/>
 </Layout>
