--- a/src/pages/es/works.astro
+++ b/src/pages/es/works.astro
@@ -7,6 +7,8 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<Layout title={t('title.works')}>
+<Layout title={t('title.works')}
+        description={t('description.works')}
+        keywords={t('keywords.works')}>
     <WorksSection></WorksSection>
 </Layout>
