--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,6 +9,7 @@ const t = useTranslations(lang);
 
 <Layout title={t('title.contact')}
         description={t('description.contact')}
-        keywords={t('keywords.contact')}>
+        keywords={t('keywords.contact')}
+        hasRecaptcha>
     <ContactSection/>
 </Layout>
