--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,7 @@ import GoogleRecaptcha from '@components/GoogleRecaptcha.astro';
 import Theme from '@components/Theme.astro';
 import Favicon from '@components/Favicon.astro';
 import Metadata from '@components/Metadata.astro';
+import HreflangTags from '@components/HreflangTags.astro';
 import { getLangFromUrl } from '@i18n/utils';
 
 interface Props {
@@ -44,8 +45,11 @@ Astro.response.headers.set('CDN-Cache-Control', 'public, max-age=45, must-revali
 
 		<!-- Sitemap start -->
 		<link rel="sitemap" href="/sitemap-index.xml"/>
-		<link rel="alternate" hreflang="es" href="https://agustincammarota.com/es/">
 		<!-- Sitemap end -->
+
+		<!-- HreflangTags start -->
+		<HreflangTags/>
+		<!-- HreflangTags end -->
 
 		<!-- Google Recaptcha start -->
 		{ hasRecaptcha ? <GoogleRecaptcha/> : '' }
